concord_macros/tests/trybuild/fail/sema/policy/same_layer_duplicate_behavior.rs
use concord_macros::api;

api! {
    client DuplicateBehaviorApi {
        base "https://example.com"

        profiles {
            profile read {
                retry off
            }
        }

        default {
            profile read
            profile read
        }
    }
}

fn main() {}
